--- a/Foursouls Cards Initializer/Foursouls Cards Initializer/MainWindow.xaml
+++ b/Foursouls Cards Initializer/Foursouls Cards Initializer/MainWindow.xaml
@@ -7,50 +7,43 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid>
+    <Grid  AllowDrop="True" 
+           Drop="Folders_Drop" 
+           DragOver="Folders_DragOver"
+           DragLeave="Folders_DragLeave">
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Grid Grid.Column="0" Grid.Row="0" HorizontalAlignment="Stretch" Name="TextBlockDirectoryGrid">
-            <Border Margin="20, 20" BorderBrush="LightGray" BorderThickness="2">
-                <TextBlock Name="FolderPath" Text="Folder Path" Margin="10, 10"/>
+        <Grid Grid.Column="0" Grid.Row="0" HorizontalAlignment="Stretch" Name="ButtonGridElement" Margin="10, 10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0" Margin="10, 10">
+                <Button Name="OpenFolderButton" Content="Add Folder" Click="OpenButton_Click" Padding="20, 5, 20, 5"/>
+            </Grid>
+            <Grid Grid.Column="1" Margin="10, 10">
+                <Button Name="ExitButton" Content="Exit" Click="ExitButton_Click" Padding="20, 5, 20, 5"/>
+            </Grid>
+        </Grid>
+
+        <Grid Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Name="TextBlockGridElement">
+            <Border  Grid.Column="0" Grid.Row="0" Margin="20, 20" BorderBrush="LightGray" BorderThickness="2">
+                <TextBlock
+                    Name="Folders" 
+                    Text="Folders" 
+                    MinWidth="200"
+                    MinHeight="200"
+                    Margin="10, 10"
+                    TextLineBounds="Full"
+                   />
             </Border>
         </Grid>
-
-        <Grid Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" Name="ProgressGrid">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-
-            <Grid Grid.Column="0" HorizontalAlignment="Stretch" Name="ProgressBarGrid">
-                <ProgressBar Name="ProgressBarIndicator" Visibility="Visible" Margin="20, 0, 10, 0"/>
-            </Grid>
-
-            <Grid Grid.Column="1" HorizontalAlignment="Stretch" Name="ProgressTextGrid">
-                <TextBlock Name="ProgressText" Text="0 out of ? done (0%)" Padding="0, 10, 0, 10" Margin="10, 0, 0, 0"/>
-            </Grid>
-        </Grid>
-
-        <Grid Grid.Column="0" Grid.Row="2" Name="ButtonsGrid" Margin="20, 20">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            
-            <Grid Grid.Column="0" HorizontalAlignment="Stretch" Name="OpenButtonBlock">
-                <Button Name="OpenButton" HorizontalAlignment="Stretch"   Content="Open" Click="OpenButton_Click" Padding="20, 10, 20, 10" Margin="0, 0, 10, 0"/>
-            </Grid>
-            <Grid Grid.Column="1" HorizontalAlignment="Stretch" Name="ExitButtonBlock">
-                <Button Name="ExitButton" HorizontalAlignment="Stretch" Content="Exit" Click="ExitButton_Click" Padding="20, 10, 20, 10" Margin="10, 0, 0, 0"/>
-            </Grid>
-        </Grid>
     </Grid>
-
 </Window>
